force-app/main/default/objects/Document_Assignment__c/Document_Assignment__c.object-meta.xml
<CustomObject>
    <description>Will contain documents that need to be shared to other objects but only be visible to selected users.</description>
    <label>Document Assignment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Document Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>