force-app/main/default/objects/Document_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record lookup to related Account.</description>
    <inlineHelpText>Record lookup to related Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Assignments</relationshipLabel>
    <relationshipName>Document_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>