force-app/main/default/objects/Document_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Contact.</description>
    <inlineHelpText>Lookup to related Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Document Assignments</relationshipLabel>
    <relationshipName>Document_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>