force-app/main/default/objects/Document_Assignment__c/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <description>Will redirect users to the file related to this object.</description>
    <inlineHelpText>Will redirect users to the file related to this object.</inlineHelpText>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>