force-app/main/default/objects/Document_Assignment__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Identifies what type of document this document is supposed to represent so it can be controlled through sharing rules. This will state which users will be able to see this file.</description>
    <inlineHelpText>This indicates what type of document this file is so its controlled through sharing rules. This allows only some users to view this object.</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Documents</fullName>
            </value>
            <value>
                <fullName>HR Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>